--- a/app/templates/food.html
+++ b/app/templates/food.html
@@ -25,6 +25,7 @@
       </div>
       <div class="col-md-6">
            {{ macro.display(foodie) }}
+          <p>{{random.quote}}</p>
 
      </div>
     </div>
