Add a view blogs function

--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,14 +1,14 @@
-{% macro display(category_list) %}
+{% macro displayPost(blog_list) %}
 <div class="row">
-	{% if category_list %}
-		{% for category in category_list %}
+	{% if blog_list %}
+		{% for blog in blog_list %}
 		<div class="col-md-6">
-            <div class="panel panel-danger">
-      <div class="panel-heading">{{category.title}}</div>
-      <div class="panel-body">{{category.description}}
+            <div class="panel panel-default">
+      <div class="panel-heading">{{blog.title}}</div>
+      <div class="panel-body">{{blog.description}}
       	<blockquote class="blockquote mb-0">
 					<h2></h2>
-					<footer class="blockquote-footer"> Posted by {{category.user.username}}</footer>
+					<footer class="blockquote-footer"> Posted by {{blog.user.username}}</footer>
 				</blockquote></div>
                 <div class="panel-footer"><a href="{{url_for('main.new_comment',blog_id = category.id)}}"> Add a comment</a>
 
@@ -22,6 +22,31 @@
 </div>
 {% endmacro %}
 
+
+
+{% macro displayFullPost(blog_list) %}
+<div class="row">
+	{% if blog_list %}
+		{% for blog in blog_list %}
+		<div class="col-md-6">
+            <div class="panel panel-danger">
+      <div class="panel-heading">{{blog.title}}</div>
+      <div class="panel-body">{{blog.description}}
+      	<blockquote class="blockquote mb-0">
+					<h2></h2>
+					<footer class="blockquote-footer"> Posted by {{blog.user.username}}</footer>
+				</blockquote></div>
+                <div class="panel-footer"><a href="{{url_for('main.new_comment',blog_id = category.id)}}"> Add a comment</a>
+
+</div>
+    </div>
+
+		</div>
+		{% endfor %}
+	{% else %}
+	{% endif %}
+</div>
+{% endmacro %}
 
 
 {% macro displayComment(comments) %}
