--- a/app/templates/blogs.html
+++ b/app/templates/blogs.html
@@ -1,44 +1,64 @@
-<body>
-{% import 'bootstrap/wtf.html' as wtf %}
-{% extends 'bootstrap/base.html' %}
-{% include 'navbar.html'%}
-
+{% extends "base.html" %}
+{% import "bootstrap/wtf.html" as wtf%}
 
 {% block styles%}
-    {{ super() }}
-    <link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}">
+    {{super()}}
+
 {% endblock %}
 
-{% block content %}
+
+{% block content%}
 <div class="container">
-	<div class="row">
-		<h2>New Blog Post</h2>
-		<div class="col-md-6">
-			        <img src="/static/images/create.jpg" alt="login image">
+		<div class="row">
 
-		</div>
-		<div class="col-md-6">
+			<div class="col col-md-9">
 
-		<div class="jumbotron">
-				{{wtf.quick_form(form)}}
-		<ul style="list-style: none;">
-				{% for blog in blogs %}
-					<div class="list-group">
-						<a href="#">
-							<div class="list-item">
-								<p>{{blog.id}}</p>
-							</div>
-							<h4>{{ blog.description }}</h4>
-							<h6> Posted by {{user.username}}.</h6>
-						</a>
-					</div>
-				{% endfor %}
-		</ul>
-		</div>
+				<div class="row">
+					<h5>Published By: {{blog.user.username}}</h5>
+
+				</div>
+				<div class="row">
+					<h1 class="text-center">{{blog.title}}</h1>
+
+				</div>
+
+				<div class="row">
+					<p>{{blog.description}}</p>
+
+
+				</div>
+
 			</div>
+			<!-- end of col9 -->
+			<div class="col col-md-3">
+				<div class="row">
+					<p>{{random.quote}}</p>
+
+				</div>
+
+				<div class="row">
+					<h4>Comment: </h4>
+					{{wtf.quick_form(form)}}
+
+				</div>
+				<div class="row">
+					<h3>Comments</h3>
+                {% if comments %}
+                {% for comment in comments%}
+                <p><strong>{{comment.name}}</strong>: {{comment.content}} {% if current_user.is_authenticated %}<a href="{{url_for('main.delete_comment', id = comment.id)}}"><i class="fas fa-trash-alt"></i></a>{% endif %}</p>
+                {% endfor%}
+                {% else %}
+                <p>There are no comments</p>
+                {% endif %}
+
+
+				</div>
+
+			</div>
+			<!-- end of col3 -->
+
+		</div>
+
 	</div>
-</div>
 
 
-{% endblock %}
-</body>
