Display new blogs

--- a/app/templates/new_blog.html
+++ b/app/templates/new_blog.html
@@ -16,18 +16,7 @@
 
 <div class="container">
     <div class="row">
-        <h2>Food Blogs</h2>
-      <div class= "col-md-6">
-
-
-        <img class="full" src="/static/images/bulb.png" alt="login image">
-
-      </div>
-      <div class="col-md-6">
-           {{ macro.display(foodie) }}
-          <p>{{random.quote}}</p>
-
-     </div>
+    {{wtf.quick_form(form)}}
     </div>
 </div>
 
