Add images and style templates

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -11,9 +11,9 @@
       </div>
       <div class="navbar-collapse collapse">
          <ul class="nav navbar-nav">
-            <li><a href="/">Categories</a></li>
              <li><a href="/"> || </a></li>
              <li><a href="/blogs/new/"> New Blog Post </a></li>
+             <li><a href="/all_blogs"> View Blogs </a></li>
          </ul>
           <ul class="nav navbar-nav navbar-right">
                   {% if current_user.is_authenticated %}
