--- a/app/templates/all_blog.html
+++ b/app/templates/all_blog.html
@@ -21,23 +21,29 @@
         <div class="col col-md-3">
             <div class="row">
 				<div class="row">
-					<h1 class="text-center">{{blog.title}}</h1>
+					<h1 >{{blog.title}}</h1>
 
 				</div>
 
 				<div class="row">
-					<p>{{blog.description}}</p>
+					<p>{{blog.description}}<blockquote class="blockquote mb-0">
+
+					<footer class="blockquote-footer"> Posted by {{blog.user.username}}</footer>
+				</blockquote>
+</p>
 
 
 				</div>
                 <div class="row">
-					<h6>Posted at:{{blog.date_posted[0:10]}}{{blog.date[11:16]}}</h6>
+                    <a href="{{url_for('main.view_blog',blog_id = blog.id)}}" class="btn btn-info">Read More</a>
+
 
 				</div>
 
                 </div>
 
         </div>
+        {% endfor%}
 
 
 	</div>
