--- a/app/templates/blogs.html
+++ b/app/templates/blogs.html
@@ -45,7 +45,7 @@
 					<h3>Comments</h3>
                 {% if comments %}
                 {% for comment in comments%}
-                <p><strong>{{comment.name}}</strong>: {{comment.content}} {% if current_user.is_authenticated %}<a href="{{url_for('main.delete_comment', id = comment.id)}}"><i class="fas fa-trash-alt"></i></a>{% endif %}</p>
+                <p><strong>{{comment.name}}</strong>: {{comment.content}} </p>
                 {% endfor%}
                 {% else %}
                 <p>There are no comments</p>
