--- a/app/templates/new_blog.html
+++ b/app/templates/new_blog.html
@@ -1,9 +1,7 @@
 <body>
+{% import 'bootstrap/wtf.html' as wtf %}
 {% extends 'bootstrap/base.html' %}
-{% import 'macros.html' as macro %}
-{% block navbar %}
 {% include 'navbar.html'%}
-{% endblock %}
 {% block styles%}
     {{ super() }}
     <link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}">
@@ -16,6 +14,10 @@
 
 <div class="container">
     <div class="row">
+       <div class="col-md-6">
+           <img src="/static/images/story.jpg" alt="New Blog Image">
+
+		</div>
     {{wtf.quick_form(form)}}
     </div>
 </div>
