--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,7 +16,8 @@
 {% block content %}
 <div class="container">
 	<div class="row">
-		<div class="row">
+		<div class="row home">
+			<img class="full" src="/static/images/blog1.png" alt="login image">
 
 
 		</div>
