--- a/app/templates/new_blog.html
+++ b/app/templates/new_blog.html
@@ -18,7 +18,10 @@
            <img src="/static/images/story.jpg" alt="New Blog Image">
 
 		</div>
-    {{wtf.quick_form(form)}}
+        <div class="col-md-6">
+ {{wtf.quick_form(form)}}
+		</div>
+
     </div>
 </div>
 
