--- a/app/templates/blogs.html
+++ b/app/templates/blogs.html
@@ -1,8 +1,12 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf%}
+<!-- Styles block -->
 
 {% block styles%}
-    {{super()}}
+    {{ super() }}
+    <link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
 
 {% endblock %}
 
@@ -13,43 +17,58 @@
 
 			<div class="col col-md-9">
 
-				<div class="row">
-					<h5>Published By: {{blog.user.username}}</h5>
+
+            <div class="panel panel_default">
+
+				<div class="panel-heading">
+					<h1 id="title">{{blog.title}}</h1>
 
 				</div>
-				<div class="row">
-					<h1 class="text-center">{{blog.title}}</h1>
 
-				</div>
-
-				<div class="row">
-					<p>{{blog.description}}</p>
+				<div class="panel-body">
+					<p>{{blog.description}}
 
 
 				</div>
+                <div class="panel-footer">
+					<blockquote class="blockquote mb-0">
+
+					<footer class="blockquote-footer"> Posted by {{blog.user.username}}</footer>
+				</blockquote>
+
+
+				</div>
+
+                </div>
 
 			</div>
 			<!-- end of col9 -->
 			<div class="col col-md-3">
 				<div class="row">
-					<p>{{random.quote}}</p>
+			<h5> <i class="fas fa-quote-left"></i> {{random.quote}} <i class="fas fa-quote-right"></i></h5>
 
 				</div>
 
 				<div class="row">
-					<h4>Comment: </h4>
+					<h2>Add Comment<i class="fas fa-comment-alt-edit"></i></h2>
 					{{wtf.quick_form(form)}}
 
 				</div>
 				<div class="row">
-					<h3>Comments</h3>
+					<h3>Older Comments</h3>
                 {% if comments %}
                 {% for comment in comments%}
-                <p><strong>{{comment.name}}</strong>: {{comment.content}} </p>
+					<div class="thumbnail">
+              <p>{{comment.description}} ~ {{comment.name}} </p>
+					{% if current_user.is_authenticated%}
+					<a href="{{url_for('main.delete_comment',blog_id = blog.id)}}">Delete</a>
+					{% endif %}
+
                 {% endfor%}
                 {% else %}
                 <p>There are no comments</p>
                 {% endif %}
+						</div>
 
 
 				</div>
