--- a/app/templates/new_blog.html
+++ b/app/templates/new_blog.html
@@ -2,11 +2,15 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 {% extends 'bootstrap/base.html' %}
 {% include 'navbar.html'%}
+<!-- Styles block -->
+
 {% block styles%}
     {{ super() }}
     <link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+
 {% endblock %}
-<!-- Content block -->
 
 
 <!-- Content block -->
