--- a/app/templates/new_blog.html
+++ b/app/templates/new_blog.html
@@ -1,4 +1,4 @@
-<body>
+<body id="index">
 {% import 'bootstrap/wtf.html' as wtf %}
 {% extends 'bootstrap/base.html' %}
 {% include 'navbar.html'%}
