--- a/app/templates/blogs.html
+++ b/app/templates/blogs.html
@@ -1,3 +1,4 @@
+<body>
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf%}
 <!-- Styles block -->
@@ -81,5 +82,5 @@
 	</div>
 
 {% endblock%}
-
+</body>
 
