--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -7,20 +7,18 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
          </button>
-         <a class="navbar-brand" href="/"> Home </a>
+         <a class="navbar-brand navlink" href="/"> Home </a>
       </div>
       <div class="navbar-collapse collapse">
-         <ul class="nav navbar-nav">
-             <li><a href="/"> || </a></li>
-             <li><a href="/blogs/new/"> New Blog Post </a></li>
-             <li><a href="/all_blogs"> View Blogs </a></li>
-         </ul>
-          <ul class="nav navbar-nav navbar-right">
+         <ul class="nav navbar-nav navbar-right">
+             <li><a href="/blogs/new/" class="navlink"> Write Blogs </a></li>
+             <li><a href="/all_blogs" class="navlink"> View Blogs </a></li>
+
                   {% if current_user.is_authenticated %}
-                   <li><a href="{{url_for('main.profile',uname=current_user.username)}}">Profile</a></li>
-                  <li><a href="{{url_for('auth.logout')}}">Sign out</a></li>
+                   <li><a href="{{url_for('main.profile',uname=current_user.username)}}" class="navlink">Profile</a></li>
+                  <li><a href="{{url_for('auth.logout')}}" class="navlink">Log out</a></li>
                   {% else %}
-                  <li><a href="{{url_for('auth.login')}}">Sign in</a></li>
+                  <li><a href="{{url_for('auth.login')}}" class="navlink">Log In</a></li>
                   {%endif%}
                 </ul>
       </div>
